--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         }
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "falgunphp/notification": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
