--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
     },
     "require": {
         "php": "^7.4",
-        "falgunphp/notification": "*"
+        "falgunphp/notification": "^0.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
+	"slevomat/coding-standard": "~6.0",
         "phpstan/phpstan": "^0.12.18",
         "vimeo/psalm": "^3.11",
         "phpunit/phpunit": "^9.1"
