--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,9 @@
         "falgunphp/notification": "^0.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.5",
-	"slevomat/coding-standard": "~6.0",
-        "phpstan/phpstan": "^0.12.18",
-        "vimeo/psalm": "^3.11",
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": "^9.4",
+        "sempro/phpunit-pretty-print": "^1.3",
+        "vimeo/psalm": "^3.16"
     },
     "scripts": {
         "phpunit": "phpunit --verbose --colors=always"
