added PHP 8 support

--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         }
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "falgunphp/notification": "^0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.4",
-        "sempro/phpunit-pretty-print": "^1.3",
-        "vimeo/psalm": "^3.16"
+        "phpunit/phpunit": "^9.5",
+        "sempro/phpunit-pretty-print": "^1.4",
+        "vimeo/psalm": "^3.18"
     },
     "scripts": {
         "phpunit": "phpunit --verbose --colors=always"
